Fixed issue where admin csv upload wasn't processing correctly. Made portrait indicator more visible. Added option to sort students by portrait.

--- a/photomanager/photom/static/photom/index.css
+++ b/photomanager/photom/static/photom/index.css
@@ -120,7 +120,7 @@
 
 .isc-photo-check {
   position: relative;
-  width: 30px;
+  width: 35px;
   height: 30px;
   top: -100px;
   left: 100px;
